include/crispasr_session.h

struct whisper_full_params;
struct crispasr_align_result;
typedef struct crispasr_align_result crispasr_align_result;
struct crispasr_diarize_opts_abi;
typedef struct crispasr_diarize_opts_abi crispasr_diarize_opts_abi;
struct crispasr_diarize_seg_abi;
typedef struct crispasr_diarize_seg_abi crispasr_diarize_seg_abi;
struct crispasr_diarize_turn_abi;
typedef struct crispasr_diarize_turn_abi crispasr_diarize_turn_abi;
struct crispasr_session;
typedef struct crispasr_session crispasr_session;
struct crispasr_session_result;
typedef struct crispasr_session_result crispasr_session_result;
struct crispasr_stream;
typedef struct crispasr_stream crispasr_stream;
struct crispasr_vad_abi_opts;
typedef struct crispasr_vad_abi_opts crispasr_vad_abi_opts;
// 0.10.3+ (issue #208): per-session progress callback for long-form
// (chunked) transcription. Invoked once per finished window from within
// crispasr_session_transcribe_chunked[_lang] (and any auto-chunked long
// Parakeet transcribe) with the number of input samples processed so far
// and the total. `processed` is monotonically non-decreasing and ends at
// `total`. It is invoked on the calling (transcribe) thread — keep the
// callback fast and non-blocking; do not re-enter the session from it.
// Single-pass and non-Parakeet backends do not fire it. The module-level
// atomic (crispasr_get_progress) is updated in lockstep, so pure pollers
// (e.g. Dart FFI) get chunked progress without registering a callback.
//
// Issue #385: between the unified-dispatch switch (0.8.24) and 0.8.29 the
// default non-JA Parakeet path ran through a shared orchestrator with no
// progress hook, so neither the callback nor the atomic moved until the
// call returned. The hook now lives in the orchestrator itself, so the
// contract holds on every dispatch path — including the ones that run one
// decode over a chunk-ENCODED input (an explicit chunk_seconds > 0, and the
// JA streamed route), which report per ENCODER window and emit the final
// (total, total) only once the decode and any repair pass have returned.
// A genuinely indivisible single pass still fires nothing.
typedef void (*crispasr_progress_callback)(int processed, int total, void* user_data);
// Register (or clear, with cb == NULL) the session progress callback.
// user_data is passed back verbatim to every invocation. The pointer is
// stored, not copied; keep it valid for the duration of transcribe calls.
CRISPASR_SESSION_API void crispasr_session_set_progress_callback(crispasr_session* s, crispasr_progress_callback cb,
                                                                 void* user_data);
CRISPASR_SESSION_API void crispasr_params_set_vad(whisper_full_params* p, int v);
CRISPASR_SESSION_API void crispasr_params_set_vad_model_path(whisper_full_params* p, const char* path);
CRISPASR_SESSION_API void crispasr_params_set_vad_threshold(whisper_full_params* p, float t);
CRISPASR_SESSION_API void crispasr_params_set_vad_min_speech_ms(whisper_full_params* p, int ms);
CRISPASR_SESSION_API void crispasr_params_set_vad_min_silence_ms(whisper_full_params* p, int ms);
CRISPASR_SESSION_API void crispasr_params_set_tdrz(whisper_full_params* p, int v);
CRISPASR_SESSION_API void crispasr_stream_close(crispasr_stream* s);
CRISPASR_SESSION_API crispasr_session* crispasr_session_open_explicit(const char* model_path, const char* backend_name,
                                                                      int n_threads);
CRISPASR_SESSION_API crispasr_session* crispasr_session_open(const char* model_path, int n_threads);
CRISPASR_SESSION_API const char* crispasr_session_backend(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_available_backends(char* out_csv, int out_cap);
// Acoustic language detected by the last transcribe, as an ISO-639-1 code
// (whisper only; other backends fall back to the source-language hint, then
// "unknown"). Writes into out_buf (NUL-terminated, truncated to out_cap) and
// returns the code length in bytes, or -1 on bad args. Distinct from the
// text-LID pass crispasr_text_detect_language.
CRISPASR_SESSION_API int crispasr_session_detected_language(crispasr_session* s, char* out_buf, int out_cap);
// CTC vocabulary access (Omni CTC backend). crispasr_session_n_vocab returns
// the number of SentencePiece pieces in the loaded model (0 for backends that
// don't expose a CTC vocab); crispasr_session_token_text maps a token id in
// [0, n_vocab) to its raw piece (U+2581 word-boundary marker intact), or ""
// when out of range or unsupported. Pairs with crispasr_session_result_logits
// to detokenize a greedy CTC decode.
CRISPASR_SESSION_API int crispasr_session_n_vocab(crispasr_session* s);
CRISPASR_SESSION_API const char* crispasr_session_token_text(crispasr_session* s, int id);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe_lang(crispasr_session* s, const float* pcm,
                                                                               int n_samples, const char* language);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe(crispasr_session* s, const float* pcm,
                                                                          int n_samples);
// 0.8.7+: chunked-encode transcribe (issue #208). Forces the Parakeet
// backend through its bounded long-form path (overlapping short-window
// transcribe-and-merge for non-JA models, streamed encoder for the JA-only
// model) regardless of audio length, so long files transcribe in bounded
// time AND recover the sections a single full-length pass drops.
// `chunk_seconds <= 0` keeps the per-model defaults; otherwise it sets the
// non-JA window length / the JA streamed window. `overlap_seconds < 0`
// uses the default. For non-Parakeet backends the chunk params are inert
// and this behaves exactly like crispasr_session_transcribe[_lang].
//
// 0.8.29+ (issue #350): `chunk_seconds = 0` is "per-model defaults", NOT
// "no chunking" — reaching this entry point at all is a request for bounded
// long-form, so the non-JA single-pass cap drops from 300 s to the decoder's
// reliable ~30 s window for this call. Between 0.8.24 and 0.8.28 the unified
// dispatch collapsed the two, and such a call took ONE full-length decode
// that silently dropped whole spans of speech.
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe_chunked_lang(
    crispasr_session* s, const float* pcm, int n_samples, int chunk_seconds, int overlap_seconds, const char* language);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe_chunked(crispasr_session* s, const float* pcm,
                                                                                  int n_samples, int chunk_seconds,
                                                                                  int overlap_seconds);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe_vad(
    crispasr_session* s, const float* pcm, int n_samples, int sample_rate, const char* vad_model_path,
    const crispasr_vad_abi_opts* opts_or_null);
CRISPASR_SESSION_API int crispasr_diarize_segments_abi(const float* left_pcm, const float* right_pcm, int32_t n_samples,
                                                       int32_t is_stereo, crispasr_diarize_seg_abi* segs,
                                                       int32_t n_segs, const crispasr_diarize_opts_abi* opts);
// 0.8.30+ (issue #395): diarize AND hand back the speaker turns the method
// derived from the audio, so a caller can split one of its own segments that
// spans a speaker change — labelling alone can never resolve finer than the
// segment grid the caller sent in. Only FoxNose (method 4) derives turns; the
// other methods report 0, which is not an error.
//
// A NEW SYMBOL rather than a signature change, so the existing ABI stays
// stable (same append-only convention as crispasr_diarize_opts_abi).
// `out_turns == NULL, n_turns_cap == 0, out_n_turns == NULL` behaves exactly
// like crispasr_diarize_segments_abi.
//
// `out_n_turns`, when non-NULL, always receives the TOTAL turn count — also
// when it exceeds n_turns_cap, so a caller can size and retry (at the cost of
// a second full pass: the ABI keeps no state between calls). `out_turns`,
// when non-NULL, receives up to n_turns_cap turns.
//
// Turn timestamps are centiseconds on the SAME absolute timeline as
// crispasr_diarize_seg_abi (i.e. `opts->slice_t0_cs` is already added back),
// so turns and caller segments compare directly.
//
// Returns 0 on success, 2 when a turn buffer was given and could not hold
// every turn (the segments are still fully labelled and the first n_turns_cap
// turns are still written), 1 on model load failure, -1 on invalid arguments.
CRISPASR_SESSION_API int crispasr_diarize_segments_turns_abi(const float* left_pcm, const float* right_pcm,
                                                             int32_t n_samples, int32_t is_stereo,
                                                             crispasr_diarize_seg_abi* segs, int32_t n_segs,
                                                             const crispasr_diarize_opts_abi* opts,
                                                             crispasr_diarize_turn_abi* out_turns, int32_t n_turns_cap,
                                                             int32_t* out_n_turns);
CRISPASR_SESSION_API crispasr_align_result* crispasr_align_words_abi(const char* aligner_model, const char* transcript,
                                                                     const float* samples, int32_t n_samples,
                                                                     int64_t t_offset_cs, int32_t n_threads);
CRISPASR_SESSION_API void crispasr_align_result_free(crispasr_align_result* r);
CRISPASR_SESSION_API void crispasr_session_result_free(crispasr_session_result* r);
CRISPASR_SESSION_API crispasr_stream* crispasr_session_stream_open(crispasr_session* s, int n_threads, int step_ms,
                                                                   int length_ms, int keep_ms, const char* language,
                                                                   int translate);